Fix icon having its overflow hidden
https://coveord.atlassian.net/browse/JSUI-862

--- a/sass/_ResultFrame.scss
+++ b/sass/_ResultFrame.scss
@@ -5,7 +5,7 @@
     margin: 0 0 4px 0;
     float: none;
     &.coveo-icon-with-caption-overlay {
-      overflow: visible;
+      overflow: visible !important;
       position: relative;
     }
   }
